--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <html>
-<head>
-  <meta charset="UTF-8">
-  <script language="javascript" type="text/javascript" src="p5-zip/empty-example/libraries/p5.js"></script>
-  <title>Carpinski Teppich</title>
-  <!-- uncomment lines below to include extra p5 libraries -->
-  <script language="javascript" src="p5-zip/empty-example/libraries/p5.dom.js"></script>
-  <!--<script language="javascript" src="libraries/p5.sound.js"></script>-->
-  <script language="javascript" type="text/javascript" src="sketch.js"></script>
-  <!-- this line removes any default padding and style. you might only need one of these values set. -->
+  <head>
+    <meta charset="UTF-8" />
 
-</head>
-<body>
-</body>
+    <title>Carpinski Teppich</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script> -->
+    <script
+      language="javascript"
+      type="text/javascript"
+      src="sketch.js"
+    ></script>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+  </head>
+  <body></body>
 </html>
