--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
   <head>
     <meta charset="UTF-8" />
 
-    <title>Carpinski Teppich</title>
+    <title>Sierpinski Carpet</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.7/dat.gui.min.js"></script>
     <script
       language="javascript"
       type="text/javascript"
